<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/change_bike_colour"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_bike_colour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_bike_trackerID" />

    <EditText
        android:id="@+id/change_bike_name"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:autofillHints="@string/add_bike_name"
        android:ems="10"
        android:hint="@string/add_bike_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_bike_title" />

    <EditText
        android:id="@+id/change_bike_trackerID"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:autofillHints="@string/add_bike_device_id"
        android:ems="10"
        android:hint="@string/add_bike_device_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_bike_name" />

    <Button
        android:id="@+id/change_bike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/add_bike_device"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_bike_colour" />

    <TextView
        android:id="@+id/change_bike_title"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:text="@string/add_bike_title"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change_bike_icon"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        android:text="@string/add_bike_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_bike_trackerID" />
</androidx.constraintlayout.widget.ConstraintLayout>