<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/edit_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/tracker_battery"
        android:src="@drawable/android_bike"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/android_bike" />

    <TextView
        android:id="@+id/edit_name"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:hint="@string/edit_bike_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address_view"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint=""
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_bike_deviceID" />

    <ImageView
        android:id="@+id/battery_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/edit_bike_save"
        android:src="@drawable/ic_battery_full_black_24dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_battery_full_black_24dp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/edit_bike_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_view_on_map" />

    <Button
        android:id="@+id/route_to_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/edit_bike_route_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_view" />

    <TextView
        android:id="@+id/percentage_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toStartOf="@+id/battery_view"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_view_on_map"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/edit_bike_locate"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toStartOf="@+id/edit_bike_ping"
        app:layout_constraintStart_toEndOf="@+id/route_to_button"
        app:layout_constraintTop_toBottomOf="@+id/address_view" />

    <Button
        android:id="@+id/edit_bike_ping"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/edit_bike_ping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_view" />

    <TextView
        android:id="@+id/edit_bike_deviceID"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit_bike_device_id"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

</androidx.constraintlayout.widget.ConstraintLayout>